gccida/c2/sched_analyze_insn
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/sched-deps.c:1369:27: error: unknown type name 'deps_0'
void  sched_analyze_insn( deps_0 *deps, rtx x, rtx insn, rtx loop_notes) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/sched-deps.c:1378:1: error: use of undeclared identifier 'deps_0'; did you mean 'deps'?
deps_0 *v12; // rbp 
^~~~~~
deps
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/sched-deps.c:1369:35: note: 'deps' declared here
void  sched_analyze_insn( deps_0 *deps, rtx x, rtx insn, rtx loop_notes) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/sched-deps.c:1378:9: error: use of undeclared identifier 'v12'
deps_0 *v12; // rbp 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/sched-deps.c:1589:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = ( rtx)x[1]; 
           ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/sched-deps.c:1633:1: error: use of undeclared identifier 'v12'
v12 = deps; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/sched-deps.c:1636:21: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( i = ( __int64)i22[4]; i; i = *( _QWORD *)( i + 16) ) 
                    ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/sched-deps.c:1667:51: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( j = deps->pending_write_insns; j; j = ( rtx)j[1] ) 
                                                  ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/sched-deps.c:1679:28: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
pending_read_insns = ( rtx)pending_read_insns[1]; 
                           ^~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/sched-deps.c:1683:57: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( k = deps->last_pending_memory_flush; k; k = ( rtx)k[1] ) 
                                                        ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/sched-deps.c:1689:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v16 = (  struct rtx_def *)loop_notes[1]; 
                          ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/sched-deps.c:1697:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v19.rtwint = ( __int64)v17->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/sched-deps.c:1702:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v16 = (  struct rtx_def *)v17[1]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/sched-deps.c:1730:12: error: use of undeclared identifier 'v12'
reg_last = v12->reg_last; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/sched-deps.c:1731:44: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( n = reg_last[v66].sets; n; n = ( rtx)n[1] ) 
                                           ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/sched-deps.c:1732:39: error: use of undeclared identifier 'reg_note'; did you mean 'reg_names'?
add_dependence( i22, n->fld[0].rtx, ( reg_note)0); 
                                      ^~~~~~~~
                                      reg_names
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/regs.h:166:21: note: 'reg_names' declared here
extern const char * reg_names[FIRST_PSEUDO_REGISTER];
                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/sched-deps.c:1732:48: error: expected ')'
add_dependence( i22, n->fld[0].rtx, ( reg_note)0); 
                                               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/sched-deps.c:1732:15: note: to match this '('
add_dependence( i22, n->fld[0].rtx, ( reg_note)0); 
              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/sched-deps.c:1735:51: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( ii = reg_last[v66].clobbers; ii; ii = ( rtx)ii[1] ) 
                                                  ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/sched-deps.c:1736:40: error: use of undeclared identifier 'reg_note'; did you mean 'reg_names'?
add_dependence( i22, ii->fld[0].rtx, ( reg_note)0); 
                                       ^~~~~~~~
                                       reg_names
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/regs.h:166:21: note: 'reg_names' declared here
extern const char * reg_names[FIRST_PSEUDO_REGISTER];
                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/sched-deps.c:1736:49: error: expected ')'
add_dependence( i22, ii->fld[0].rtx, ( reg_note)0); 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/sched-deps.c:1736:15: note: to match this '('
add_dependence( i22, ii->fld[0].rtx, ( reg_note)0); 
              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/sched_analyze_insn/src/obj/sched-deps.o] Error 1
